fix content spacing at testimonials

--- a/packages/frontend/src/css/namari-style.scss
+++ b/packages/frontend/src/css/namari-style.scss
@@ -720,7 +720,7 @@ h6 {
 /*Icon Block*/
 
 .text-content {
-    line-height: 25px;
+    line-height: 24px;
 }
 
 .icon-block {
